--- a/src/app.css
+++ b/src/app.css
@@ -1,9 +1,18 @@
+* {
+  font-family: monospace;
+}
+
 /* FROM: https://manuel.pinto.dev */
 body {
   background: linear-gradient(-45deg, #ee7752, #dce73c, #23a6d5, #23d5ab);
   background-size: 400% 400%;
   animation: gradient 18s ease infinite;
   height: 100vh;
+}
+
+h2 {
+  
+  text-decoration: underline;
 }
 
 @keyframes gradient {
